src/test/ui/libstd-case-typo/ffi.stderr
error[E0412]: cannot find type `cStr` in this scope
  --> $DIR/ffi.rs:4:18
   |
LL | fn test_cstr(_x: cStr){}
   |                  ^^^^ not found in this scope
   |
help: did you mean `std::ffi::CStr`?
   |
LL | fn test_cstr(_x: std::ffi::CStr){}
   |                  ^^^^^^^^^^^^^^

error[E0412]: cannot find type `Osstr` in this scope
  --> $DIR/ffi.rs:6:19
   |
LL | fn test_osstr(_x: Osstr){}
   |                   ^^^^^ not found in this scope
   |
help: did you mean `std::ffi::OsStr`?
   |
LL | fn test_osstr(_x: std::ffi::OsStr){}
   |                   ^^^^^^^^^^^^^^^

error[E0412]: cannot find type `Osstring` in this scope
  --> $DIR/ffi.rs:8:22
   |
LL | fn test_osstring(_x: Osstring){}
   |                      ^^^^^^^^ not found in this scope
   |
help: did you mean `std::ffi::OsString`?
   |
LL | fn test_osstring(_x: std::ffi::OsString){}
   |                      ^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0412`.
